--- a/client/app/login/login.view.html
+++ b/client/app/login/login.view.html
@@ -44,3 +44,15 @@
         </div>
     </div>
 </div>
+
+
+<script>
+        (function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/sdk.js";
+      fjs.parentNode.insertBefore(js, fjs);
+
+    }(document, 'script', 'facebook-jssdk')); 
+</script>
